--- a/post.css
+++ b/post.css
@@ -5,7 +5,6 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    /*height: 100%;*/
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -16,7 +15,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0a5247; /* Dark Green */
+    background-color: #0a5247;
     padding: 10px 20px;
     color: antiquewhite;
 }
@@ -84,12 +83,12 @@ h3 {
 }
 
 .left-section {
-    flex: 1; /* Make left and right sections equal size */
+    flex: 1;
     padding: 20px;
 }
 
 .right-section {
-    flex: 1; /* Make left and right sections equal size */
+    flex: 1;
     padding: 20px;
 }
 
@@ -106,7 +105,6 @@ textarea {
     height: 40px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
-
 
 form div {
     margin-bottom: 10px;
@@ -155,7 +153,7 @@ form div {
 }
 
 input[type="file"] {
-  display: none; /* Hides the file input */
+  display: none;
 }
 
 label {
