--- a/post.css
+++ b/post.css
@@ -108,19 +108,23 @@ textarea {
 
 form div {
     margin-bottom: 10px;
+
 }
 
 .photo-upload {
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
-    top: 200px;
+    /*top: 200px;*/
     padding: 20px;
+    margin-top: 25px;
     border: 1.3px solid #0a5247;
     border-radius: 30px;
     background-color: #e7ed76;
-    width: 90%;
-    height: 350px;
+    width: 80%;
+    height: 330px;
+    /*height: 100%;*/
     text-align: center;
     font-size: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -176,12 +180,12 @@ input[type="text"]{
     padding: 10px;
     margin-left: 10px;
     width: 100%;
+
 }
 
 .dietryTags {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     gap: 10px;
     border: 1.3px solid #0a5247;
     border-radius: 30px;
@@ -205,6 +209,13 @@ input[type="text"]{
 .dietryTags input[type="checkbox"] {
     margin-right: 10px;
     accent-color: #bfd202;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 30px; /* Space below the button */
+    /*margin-top: 20px; !* Space above the button *!*/
 }
 
 .post-btn {
