--- a/CSS/login.css
+++ b/CSS/login.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: #bfd202;
-    background-image: url("lunch box.jpeg") ;
+    background-image: url("../images/lunch box.jpeg") ;
     background-repeat: no-repeat;
     background-position:right center;
     background-size: 45% 100%;
