--- a/CSS/feed.css
+++ b/CSS/feed.css
@@ -45,6 +45,59 @@ nav {
 .nav-links .logout:hover {
     background-color: antiquewhite; /* Cream */
 }
+main {
+    text-align: center;
+    font-family: 'Palatino Linotype', 'Palatino', serif;
+}
+
+.heading {
+    font-family: "Cooper", serif;
+    background-color: #bfd202;
+    padding: 10px;
+    font-size: 70px;
+    color: #0a5247;
+    margin: 0;
+}
+
+
+.recipe-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+.recipe-card {
+    background-color: #bfd202;
+    border-radius: 8px;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+
+.recipe-card img {
+    width: 100%;
+    border-radius: 8px;
+        object-fit: cover;
+
+}
+
+.recipe-card h3 {
+    margin: 10px 0;
+    font-size: 1.2em;
+    color: #0a5247;
+}
+
+.recipe-card p {
+    margin: 5px 0;
+    font-size: 0.9em;
+    color: #0a5247;
+}
+
+.recipe-card:hover {
+    transform: scale(1.05);
+}
 
 @media (max-width: 768px) {
     .nav-links {
