--- a/CSS/post.css
+++ b/CSS/post.css
@@ -67,7 +67,7 @@ h3 {
     font-size: 70px;
     font-family: 'Cooper Black', 'Georgia', serif;
     background-color: #bfd202;
-    padding: 20px;
+    padding: 10px;
 }
 
 .form-container {
@@ -103,7 +103,7 @@ textarea {
     margin-left: 10px;
     width: 100%;
     height: 40px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 form div {
@@ -127,7 +127,7 @@ form div {
     /*height: 100%;*/
     text-align: center;
     font-size: 20px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .photo-upload label {
@@ -174,7 +174,7 @@ input[type="text"]{
     background-color: #e7ed76;
     border-color: #0a5247;
     border-width: 1.3px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     font-family: 'Palatino Linotype', 'Palatino', serif;
     text-align: center;
     padding: 10px;
@@ -194,7 +194,7 @@ input[type="text"]{
     padding: 1px;
     margin-left: 10px;
     width: 100%;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .dietryTags label {
@@ -226,7 +226,7 @@ input[type="text"]{
     font-size: 16px;
     padding: 10px;
     border-radius: 30px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border: none;
     font-family: 'Palatino Linotype', 'Palatino', serif;
     align-self: center;
