--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -107,6 +107,12 @@ nav {
     max-width: 400px;
     height: auto;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+
+}
+
+.lunchbox-picture:hover {
+    transform: scale(1.05);
 }
 
 
