--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -8,7 +8,6 @@ body {
     background-color: #e7ed76;
     width: 100%;
     height: 100%;
-    box-sizing: border-box;
     font-family: 'Palatino Linotype', 'Palatino', serif;
 }
 
@@ -16,7 +15,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0a5247; /* Dark Green */
+    background-color: #0a5247;
     padding: 10px 20px;
     color: antiquewhite;
 }
@@ -41,19 +40,18 @@ nav {
 }
 
 .nav-links a:hover {
-    background-color: #bfd202; /* Medium Green */
+    background-color: #bfd202;
     color: black;
 }
 
 .nav-links .logout {
-    background-color: #e7ed76; /* Light Green */
+    background-color: #e7ed76;
     color: black;
 }
 
 .nav-links .logout:hover {
-    background-color: antiquewhite; /* Cream */
+    background-color: antiquewhite;
 }
-
 
 .container {
     display: flex;
@@ -72,7 +70,7 @@ nav {
     font-size: 60px;
     background-color: #bfd202;
     padding: 20px 30px;
-    font-family: Cooper, serif;
+    font-family: 'Cooper', serif;
     text-align: center;
     border-radius: 30px;
 }
@@ -108,17 +106,15 @@ nav {
     height: auto;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
-
 }
 
 .lunchbox-picture:hover {
     transform: scale(1.05);
 }
 
-
 @media (max-width: 768px) {
     .nav-links {
         flex-direction: column;
-        gap: -10px;
+        gap: 10px;
     }
 }
