--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -43,19 +43,12 @@ label {
     color: #0a5247;
     font-family: 'Palatino Linotype', 'Palatino', serif;
     margin-bottom: 5px;
-    text-align:center;
+    text-align: center;
     width: 100%;
-
-    /*margin-left: 30px;*/
-
-    /*display: block;*/
-    /*align-self: flex-start;*/
 }
 
 .input-field {
     display: block;
-    justify-content: start;
-    align-items: start;
     text-align: center;
     width: 100%;
     margin-bottom: 15px;
@@ -66,15 +59,12 @@ label {
     font-family: 'Palatino Linotype', 'Palatino', serif;
     padding: 10px;
     box-sizing: border-box;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .signup-btn, .signin-btn {
     width: 80%;
     text-align: center;
-    background-color: #ffc643;
-    color: black;
     font-size: 16px;
     padding: 10px;
     border-radius: 30px;
@@ -87,6 +77,7 @@ label {
     margin-top: 10px;
     background-color: #ffc643;
     color: #000000;
+    cursor: pointer;
 }
 
 .signup-btn:hover {
@@ -97,13 +88,13 @@ label {
 .signin-btn {
     background-color: lightgreen;
     color: #000000;
+    cursor: pointer;
 }
 
 .signin-btn:hover {
     background-color: green;
     animation: grow 0.5s ease-in-out;
 }
-
 
 .signin-text {
     margin-top: 20px;
@@ -125,13 +116,10 @@ label {
     justify-content: center;
     text-align: center;
     margin-bottom: 20px;
-
 }
 
 .photo-label {
-    align-items: center;
     display: block;
-    justify-content: center;
     text-align: center;
     width: 100%;
     font-size: 16px;
@@ -143,12 +131,31 @@ label {
     border: 1px solid #043b33;
     box-sizing: border-box;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-
 }
-
 
 input[type="file"] {
     display: none;
+}
+
+.photo-label:hover {
+    background-color: #d4d85d;
+}
+
+.photo-label i {
+    font-size: 24px;
+    color: #0a5247;
+    margin-right: 10px;
+}
+
+.error {
+    color: red;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: 'Palatino Linotype', 'Palatino', serif;
+}
+
+.input-error {
+    border: 2px solid red;
 }
 
 @keyframes grow {
@@ -162,35 +169,3 @@ input[type="file"] {
         transform: scale(1);
     }
 }
-
-.photo-label:hover {
-    background-color: #d4d85d;
-}
-
-.photo-label i {
-    font-size: 24px;
-    color: #0a5247;
-    margin-right: 10px;
-}
-
-/* Error message styling */
-.error {
-    color: red;
-    font-size: 14px;
-    font-weight: bold;
-    font-family: 'Palatino Linotype', 'Palatino', serif;
-}
-
-/* Success message styling */
-.success-message {
-    color: green;
-    font-size: 16px;
-    font-weight: bold;
-    font-family: 'Palatino Linotype', 'Palatino', serif;
-}
-
-/* Highlight input fields with errors */
-.input-error {
-    border: 2px solid red;
-}
-
