--- a/CSS/post.css
+++ b/CSS/post.css
@@ -243,3 +243,8 @@ input[type="text"] {
     text-align: center;
     font-family: 'Palatino Linotype', 'Palatino', serif;
 }
+
+.success-message {
+            color: green;
+            font-weight: bold;
+        }
