--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -169,3 +169,9 @@ input[type="file"] {
         transform: scale(1);
     }
 }
+
+.success-message {
+            color: green;
+            font-weight: bold;
+        }
+
