--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -171,7 +171,15 @@ input[type="file"] {
 }
 
 .success-message {
-            color: green;
-            font-weight: bold;
-        }
+    color: green;
+    font-weight: bold;
+    font-family: 'Palatino Linotype', 'Palatino', serif;
+    padding-top: 20px;
+}
 
+
+
+.file-feedback {
+    font-weight: normal;
+    font-size: smaller;
+}
