--- a/pages/log in/static/CSS/login.css
+++ b/pages/log in/static/CSS/login.css
@@ -7,7 +7,7 @@
 
 body {
     background-color: #bfd202;
-    background-image: url("../images/lunchbox.jpeg");
+    background-image: url("../../../../static/media/images/lunchbox.jpeg");
     background-repeat: no-repeat;
     background-position: right center;
     background-size: 45% 100%;
