--- a/pages/log in/templates/login.html
+++ b/pages/log in/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <title>What's In My Box</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/login.css">
+    <link rel="stylesheet" href="../static/CSS/login.css">
 </head>
 <body>
     <h3>What's In My Box?</h3>
@@ -40,6 +40,6 @@
             class="signup-btn">Sign Up!
         </button>
     </div>
-    <script src="../JS/login.js"></script>
+    <script src="../static/js/login.js"></script>
 </body>
 </html>
