--- a/pages/recipe/templates/recipe.html
+++ b/pages/recipe/templates/recipe.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <title>LunchBox Recipe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/recipe.css">
+    <link rel="stylesheet" href="../static/CSS/recipe.css">
 </head>
 <body>
     <nav>
         <div class="nav-logo">What's in my Box?</div>
         <div class="nav-links">
-            <a href="feed.html">Feed</a>
-            <a href="profile.html">My Profile</a>
-            <a href="post.html">Share a New Post</a>
-            <a href="search.html">Search</a>
-            <a href="login.html" class="logout">Log Out</a>
+            <a href="../../feed/templates/feed.html">Feed</a>
+            <a href="../../profile/templates/profile.html">My Profile</a>
+            <a href="../../post/templates/post.html">Share a New Post</a>
+            <a href="../../search/templates/search.html">Search</a>
+            <a href="../../log%20in/templates/login.html" class="logout">Log Out</a>
         </div>
     </nav>
 
     <div class="container">
         <div class="image-section">
-            <img src="../images/meatballs.jpg" alt="Lunchbox" />
+            <img src="../../../static/media/images/meatballs.jpg" alt="Lunchbox" />
         </div>
 
         <div class="right-section">
