--- a/pages/feed/templates/feed.html
+++ b/pages/feed/templates/feed.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Feed</title>
-    <link rel="stylesheet" href="../CSS/feed.css">
+    <link rel="stylesheet" href="../static/CSS/feed.css">
 </head>
 <body>
     <nav>
         <div class="nav-logo">What's in my Box?</div>
         <div class="nav-links">
             <a href="feed.html">Feed</a>
-            <a href="profile.html">My Profile</a>
-            <a href="post.html">Share a New Post</a>
-            <a href="search.html">Search</a>
-            <a href="login.html" class="logout">Log Out</a>
+            <a href="../../profile/templates/profile.html">My Profile</a>
+            <a href="../../post/templates/post.html">Share a New Post</a>
+            <a href="../../search/templates/search.html">Search</a>
+            <a href="../../log%20in/templates/login.html" class="logout">Log Out</a>
         </div>
     </nav>
 
@@ -23,8 +23,8 @@
         <div class="recipe-grid">
             <!-- Recipe 1 -->
             <div class="recipe-card">
-                <a href="recipe.html">
-                    <img src="../images/meatballs.jpg" alt="Recipe 1">
+                <a href="../../recipe/templates/recipe.html">
+                    <img src="../../../static/media/images/meatballs.jpg" alt="Recipe 1">
                 </a>
                 <h3>Recipe Title 1</h3>
                 <p>Posted by: Ido Cohen</p>
@@ -33,8 +33,8 @@
 
             <!-- Recipe 2 -->
             <div class="recipe-card">
-                <a href="recipe.html">
-                    <img src="../images/recipe3.jpg" alt="Recipe 2">
+                <a href="../../recipe/templates/recipe.html">
+                    <img src="../../../static/media/images/recipe3.jpg" alt="Recipe 2">
                 </a>
                 <h3>Recipe Title 2</h3>
                 <p>Posted by: Maya Levi</p>
@@ -43,8 +43,8 @@
 
             <!-- Recipe 3 -->
             <div class="recipe-card">
-                <a href="recipe.html">
-                    <img src="../images/AutumnSalad.jpg" alt="Recipe 3">
+                <a href="../../recipe/templates/recipe.html">
+                    <img src="../../../static/media/images/AutumnSalad.jpg" alt="Recipe 3">
                 </a>
                 <h3>Recipe Title 3</h3>
                 <p>Posted by: Noam Regev</p>
