--- a/pages/post/templates/post.html
+++ b/pages/post/templates/post.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post A New Lunch Box</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../CSS/post.css">
+    <link rel="stylesheet" href="../static/CSS/post.css">
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav>
         <div class="nav-logo">What's in my Box?</div>
         <div class="nav-links">
-            <a href="feed.html">Feed</a>
-            <a href="profile.html">My Profile</a>
+            <a href="../../feed/templates/feed.html">Feed</a>
+            <a href="../../profile/templates/profile.html">My Profile</a>
             <a href="post.html">Share a New Post</a>
-            <a href="search.html">Search</a>
-            <a href="login.html" class="logout">Log Out</a>
+            <a href="../../search/templates/search.html">Search</a>
+            <a href="../../log%20in/templates/login.html" class="logout">Log Out</a>
         </div>
     </nav>
 
@@ -96,6 +96,6 @@
         <button type="button" class="post-btn">Click to share!</button>
     </div>
 
-    <script src="../JS/post.js"></script>
+    <script src="../static/js/post.js"></script>
 </body>
 </html>
