--- a/pages/search/templates/search.html
+++ b/pages/search/templates/search.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
-    <link rel="stylesheet" href="../CSS/search.css">
+    <link rel="stylesheet" href="../static/CSS/search.css">
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav>
         <div class="nav-logo">What's in my Box?</div>
         <div class="nav-links">
-            <a href="feed.html">Feed</a>
-            <a href="profile.html">My Profile</a>
-            <a href="post.html">Share a New Post</a>
+            <a href="../../feed/templates/feed.html">Feed</a>
+            <a href="../../profile/templates/profile.html">My Profile</a>
+            <a href="../../post/templates/post.html">Share a New Post</a>
             <a href="search.html">Search</a>
-            <a href="login.html" class="logout">Log Out</a>
+            <a href="../../log%20in/templates/login.html" class="logout">Log Out</a>
         </div>
     </nav>
 
