--- a/pages/sign up/templates/signup.html
+++ b/pages/sign up/templates/signup.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../CSS/signup.css">
-    <script defer src="../JS/signup.js"></script>
+    <link rel="stylesheet" href="../static/CSS/signup.css">
+    <script defer src="../static/js/signup.js"></script>
 </head>
 <body>
     <h3>What's In My Box</h3>
@@ -85,6 +85,6 @@
             Sign In
         </button>
     </div>
- <script src="../JS/signup.js"></script>
+ <script src="../static/js/signup.js"></script>
 </body>
 </html>
