--- a/pages/log in/templates/login.html
+++ b/pages/log in/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <title>What's In My Box</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/CSS/login.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/login.css') }}">
 </head>
 <body>
     <h3>What's In My Box?</h3>
