--- a/pages/profile/templates/profile.html
+++ b/pages/profile/templates/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile</title>
-    <link rel="stylesheet" href="../static/CSS/profile.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/profile.css') }}">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -24,7 +24,7 @@
         <!-- Left Section: User Info -->
         <div class="left-half">
             <h1>My Profile</h1>
-            <img src="../../../static/media/images/newprofile.jpg" alt="User Profile Picture" class="profile-picture">
+            <img src="../../../static/images/newprofile.jpg" alt="User Profile Picture" class="profile-picture">
             <div class="username">
                 <strong>@username</strong>
                 <br>
@@ -37,16 +37,16 @@
         <!-- Right Section: User Lunchboxes -->
         <div class="right-half">
             <a href="../../recipe/templates/recipe.html">
-                <img src="../../../static/media/images/AutumnSalad.jpg" alt="Lunch Box 1" class="lunchbox-picture">
+                <img src="../../../static/images/AutumnSalad.jpg" alt="Lunch Box 1" class="lunchbox-picture">
             </a>
             <a href="../../recipe/templates/recipe.html">
-                <img src="../../../static/media/images/meatballs.jpg" alt="Lunch Box 2" class="lunchbox-picture">
+                <img src="../../../static/images/meatballs.jpg" alt="Lunch Box 2" class="lunchbox-picture">
             </a>
             <a href="../../recipe/templates/recipe.html">
-                <img src="../../../static/media/images/recipe3.jpg" alt="Lunch Box 3" class="lunchbox-picture">
+                <img src="../../../static/images/recipe3.jpg" alt="Lunch Box 3" class="lunchbox-picture">
             </a>
             <a href="../../recipe/templates/recipe.html">
-                <img src="../../../static/media/images/Recipe2.jpg" alt="Lunch Box 4" class="lunchbox-picture">
+                <img src="../../../static/images/Recipe2.jpg" alt="Lunch Box 4" class="lunchbox-picture">
             </a>
         </div>
     </div>
