--- a/pages/post/templates/post.html
+++ b/pages/post/templates/post.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post A New Lunch Box</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../static/CSS/post.css">
+{#    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">#}
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/post.css') }}">
 </head>
 <body>
     <!-- Navigation Bar -->
