--- a/pages/search/templates/search.html
+++ b/pages/search/templates/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
-    <link rel="stylesheet" href="../static/CSS/search.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/search.css') }}">
 </head>
 <body>
     <!-- Navigation Bar -->
